syntax = "proto3";

package user_member.v1;

option go_package = "./api/user_member/v1";

import "google/protobuf/wrappers.proto";

// 运营后台用户
service UserMember{
  // 获取列表
  rpc GetList(GetListReq) returns (GetListRes) {}
  // 获取详情
  rpc GetOne(GetOneReq) returns (GetOneRes) {}
  // 修改密码
  rpc UpdatePassword(UpdatePasswordReq) returns (UpdatePasswordRes) {}
}

message GetListReq {
  // 用户名，模糊搜索
  string username = 1;
  // 姓名，模糊搜索
  string name = 2;
  // 手机号
  string mobile = 3;
  // 性别
  google.protobuf.Int64Value gender = 4;
  // 状态
  google.protobuf.Int64Value status = 5;
  // 分页号码
  // v:min:0#分页号码错误
  int32 page = 6;
  // 分页数量，最大100
  // v:max:100#分页数量最大100条
  int32 limit = 7;
}

message GetListRes {
  // 数据列表
  repeated GetListItem list = 1;
  // 数据总数
  int64 total = 2;
}

message GetListItem {
  // 用户ID
  int64 userId = 1;
  // 用户名
  string username = 2;
  // 姓名
  string name = 3;
  // 手机号
  string mobile = 4;
  // 性别
  int64 gender = 5;
  // 状态
  int64 status = 6;
  // 创建时间
  string createAt = 7;
}

message GetOneReq{
  // 用户ID
  // v:required|integer|min:1#用户ID不能为空|用户ID必须是整数|用户ID不能小于1
  int64 userId = 1;
}

message GetOneRes{
  // 用户ID
  int64 userId = 1;
  // 用户名
  string username = 2;
  // 姓名
  string name = 3;
  // 手机号
  string mobile = 4;
  // 性别
  int64 gender = 5;
  // 状态
  int64 status = 6;
  // 超级管理员
  int64 super = 7;
}

message UpdatePasswordReq{
  // 用户ID
  // v:required|integer|min:1#用户ID不能为空|用户ID必须是整数|用户ID不能小于1
  int64 userId = 1;
  // 原密码
  // v:required#原密码不能为空
  string originalPassword = 2;
  // 新密码
  // v:required|min-length:8#新密码不能为空|新密码最小长度8
  string newPassword = 3;
}

message UpdatePasswordRes{
}